# interface-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml
.github/workflows/: rust.yml
src/: error.rs  lib.rs  network_interfaces.rs  parser.rs
src/helper/: sort.rs
src/interface/: family.rs  interface_builder.rs  interface_struct.rs  mapping.rs  method.rs  mod.rs  option.rs
