[package]
name = "interface-rs"
version = "0.2.6"
authors = ["Hunter Wigelsworth <wiggels@gmail.com>"]
edition = "2021"
description = "Library for reading and writing Linux interfaces(5) files"
homepage = "https://interface-rs.com"
repository = "https://github.com/wiggels/interface-rs"
license = "MIT"
keywords = ["network", "interfaces", "linux", "configuration"]
categories = ["network-programming", "parser-implementations"]
documentation = "https://docs.rs/interface-rs"
readme = "README.md"

[dependencies]
natord = "1.0.9"
